[package]
name = "str-buf"
version = "2.0.4"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Static string buffer"
readme = "README.md"
repository = "https://github.com/DoumanAsh/str-buf"
license = "BSL-1.0"
keywords = ["str", "string", "static"]
categories = ["no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.serde]
version = "1"
optional = true
default-features = false
